# texture-atlas

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md
data/shaders/: tex.frag  tex.vert
data/sponza/: LICENSE.md
src/: CMakeLists.txt  texture_atlas.h
src/example/: main.cpp  mesh.cpp  mesh.h  misc.h  program.cpp  program.h  renderer.cpp  renderer.h  textures.cpp  textures.h
